--- a/src/UrgenceBundle/Resources/views/header.html.twig
+++ b/src/UrgenceBundle/Resources/views/header.html.twig
@@ -1,2 +1,33 @@
-<div id="page-header"></div>
-<div id="user-infos">Bienvenue !!!! </div>
+<div id="page-header">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><i class="fa fa-heartbeat"></i></a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Accueil <span class="sr-only">(page actuelle)</span></a></li>
+            <li class="active"><a href="#">Alerter les secours</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Identifiant">
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" placeholder="Mot de passe">
+            </div>
+            <button type="submit" class="btn btn-default"><i class="fa fa-sign-in"></i></button>
+          </form>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+</div>
