--- a/src/UrgenceBundle/Resources/views/header.html.twig
+++ b/src/UrgenceBundle/Resources/views/header.html.twig
@@ -15,8 +15,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Accueil <span class="sr-only">(page actuelle)</span></a></li>
-            <li class="active"><a href="#">Alerter les secours</a></li>
+            <li><a href="#" class="hvr-sweep-to-top">Accueil <span class="sr-only">(page actuelle)</span></a></li>
+            <li><a href="{{ path('urgence_alertsecours') }}" class="hvr-sweep-to-top">Alerter les secours</a></li>
+            <li><a href="#" class="hvr-sweep-to-top">Voir les alertes</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <div class="form-group">
