Ajout de la carte.

--- a/src/UrgenceBundle/Resources/public/css/screen.css
+++ b/src/UrgenceBundle/Resources/public/css/screen.css
@@ -101,6 +101,12 @@ ol.breadcrumb {
     border-radius: 3px;
 }
 
+/* * * * * Map * * * * */
+#map {
+    height: 400px;
+    margin-bottom: 20px;
+}
+
 /* * * * * Footer * * * * */
 #page-footer {
     margin-top: 20px;
