--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -3,4 +3,16 @@
 {% block title %}Voir les alertes{% endblock %}
 
 {% block content %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
+<script type="application/javascript">
+    $( document ).ready(function() {
+        mapModule.init();
+    });
+</script>
 {% endblock %}
