--- a/src/UrgenceBundle/Resources/views/Form/index.html.twig
+++ b/src/UrgenceBundle/Resources/views/Form/index.html.twig
@@ -11,32 +11,58 @@
 
 
         <div class="form-group">
-            {{ form_label(form.last_name, 'Nom',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            {{ form_label(form.public_user.lastName, 'Nom de famille',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
             <div class="col-xs-9">
-                {{ form_widget(form.last_name, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre nom...'}}) }}
+                {{ form_widget(form.public_user.lastName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre nom de famille'}}) }}
             </div>
         </div>
 
-    <div class="form-group">
-        {{ form_label(form.first_name, 'Prénom',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
-        <div class="col-xs-9">
-            {{ form_widget(form.first_name, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre prénom...'}}) }}
+        <div class="form-group">
+            {{ form_label(form.public_user.firstName, 'Prénom',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.firstName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre prénom'}}) }}
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        {{ form_label(form.phone, 'Téléphone',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
-        <div class="col-xs-9">
-            {{ form_widget(form.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone...'}}) }}
+        <div class="form-group">
+            {{ form_label(form.public_user.phone, 'Téléphone',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone'}}) }}
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        {{ form_label(form.mail, 'E-mail',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
-        <div class="col-xs-9">
-            {{ form_widget(form.mail, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre email...'}}) }}
+        <div class="form-group">
+            {{ form_label(form.public_user.mail, 'Mail',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.mail, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre email'}}) }}
+            </div>
         </div>
-    </div>
+
+        <div class="form-group">
+            {{ form_label(form.info, 'Informations complémentaires',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.info, {'attr': {'class': 'form-control', 'placeholder':'Précisez votre situation'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.alertType, "Type d'alerte",{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.alertType, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.severity, 'Sévérité',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.severity, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            {{ form_row(form.public_user.lastName) }}
+        </div>
 
     {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
