--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -6,6 +6,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
+            <div id='coordinates-div'>
+                <span id='mousemove'></span>
+            </div>
             <div id="map"></div>
         </div>
     </div>
