--- a/src/UrgenceBundle/Resources/views/Form/index.html.twig
+++ b/src/UrgenceBundle/Resources/views/Form/index.html.twig
@@ -1,8 +1,8 @@
-{% extends "::base.html.twig" %}
+{% extends 'UrgenceBundle::layout.html.twig' %}
 
 {% block title %}UrgenceBundle:Form:index{% endblock %}
 
-{% block body %}
+{% block content %}
     <div class="container">
         <h1>Formulaire de signalement</h1>
         <p>Signalez un incident directement sur ce site en remplissant le formulaire : </p>
