update form view style

--- a/src/UrgenceBundle/Resources/views/Form/index.html.twig
+++ b/src/UrgenceBundle/Resources/views/Form/index.html.twig
@@ -1,11 +1,9 @@
 {% extends 'UrgenceBundle::layout.html.twig' %}
 
-{% block title %}UrgenceBundle:Form:index{% endblock %}
+{% block title %}Formulaire de signalement{% endblock %}
 
 {% block content %}
     <div class="container">
-        <h1>Formulaire de signalement</h1>
-        <p>Signalez un incident directement sur ce site en remplissant le formulaire : </p>
 
         {{ form_start(form, {'attr' : {'class': 'form-horizontal'}}) }}
 
