--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -5,12 +5,13 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-9 col-lg-10">
             <div id='coordinates-div'>
                 <span id='mousemove'></span>
             </div>
             <div id="map"></div>
         </div>
+        <div class="col-xs-12 col-md-3 col-lg-2"></div>
     </div>
 </div>
 <script type="application/javascript">
