--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -3,77 +3,68 @@
 {% block title %}Alerter les secours{% endblock %}
 
 {% block content %}
-<form role="form" class="form-horizontal">
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="lastname">Nom</label>
-        <div class="col-xs-9">
-            <input id="lastname" type="text" class="form-control" placeholder="Entrez votre nom...">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="firstname">Prénom</label>
-        <div class="col-xs-9">
-            <input id="firstname" type="text" class="form-control" placeholder="Entrez votre prénom...">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="phonenumber">Téléphone</label>
-        <div class="col-xs-9">
-            <input id="phonenumber" type="text" class="form-control" placeholder="Entrez votre téléphone...">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="email">E-mail</label>
-        <div class="col-xs-9">
-            <input id="email" type="text" class="form-control" placeholder="Entrez votre e-mail...">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="type-alerte">Type d'alerte</label>
-        <div class="col-xs-9">
-            <select id="type-alerte" class="form-control">
-                <option>Sélectionnez un type d'alerte...</option>
-                <option>Accident</option>
-                <option>Agression</option>
-                <option>Attentat</option>
-                <option>Catastrophe naturelle</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="gravite">Type d'alerte</label>
-        <div class="col-xs-9">
-            <select id="gravite" class="form-control">
-                <option>Indiquez la gravité de la situation...</option>
-                <option>Mineure</option>
-                <option>Moyenne</option>
-                <option>Urgent</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="infos">Informations complémentaires</label>
-        <div class="col-xs-9">
-            <textarea id="infos" class="form-control" placeholder="Ajouter des informations complémentaires"
-                      rows="3"></textarea>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-3" for="position">Ma position</label>
-        <div class="col-xs-9">
-            <div class="container-fluid rounded-border padding-10">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="checkbox" style="display: inline-block;">
-                            <label>
-                                <input type="checkbox"> Position GPS
-                            </label>
-                        </div>
-                        <button class="btn btn-default"><i class="fa fa-map-marker"></i> Obtenir</button>
-                    </div>
-                </div>
+
+        {{ form_start(form, {'attr' : {'class': 'form-horizontal'}}) }}
+
+
+        <div class="form-group">
+            {{ form_label(form.public_user.lastName, 'Nom de famille',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.lastName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre nom de famille'}}) }}
             </div>
         </div>
-    </div>
-</form>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.firstName, 'Prénom',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.firstName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre prénom'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.phone, 'Téléphone',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.mail, 'Mail',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.public_user.mail, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre email'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.info, 'Informations complémentaires',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.info, {'attr': {'class': 'form-control', 'placeholder':'Précisez votre situation'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.alertType, "Type d'alerte",{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.alertType, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.severity, 'Sévérité',{'label_attr': {'class': 'col-xs-3 control-label'}}) }}
+            <div class="col-xs-9">
+                {{ form_widget(form.severity, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            {{ form_row(form.public_user.lastName) }}
+        </div>
+
+    {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+
+    {{ form_rest(form) }}
+
+    {{ form_end(form) }}
+
 {% endblock %}
