BUG : Correction du bug pour la simulation d'un post de données par une application android

--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -82,10 +82,9 @@
                     data['position'] = {'longitude' : position.coords.longitude, 'latitude' : position.coords.latitude };
                 });
             }
-            
             $.ajax({
                   type: "POST",
-                  url: "/hackathon-2016/app_dev.php/api/new-alerte",
+                  url: BASE_URL+"/api/new-alerte",
                   data: JSON.stringify(data),
                   success: function(response){
                       console.log(response);
