--- a/src/UrgenceBundle/Resources/views/layout.html.twig
+++ b/src/UrgenceBundle/Resources/views/layout.html.twig
@@ -20,6 +20,7 @@
             <script type="text/javascript" src="{{ asset('bundles/urgence/js/mapbox.js') }}"></script>
             <script type="text/javascript" src="{{ asset('bundles/urgence/js/mapModule.js') }}"></script>
             <script type="text/javascript" src="{{ asset('bundles/urgence/js/commonModule.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('bundles/urgence/js/alerterModule.js') }}"></script>
             <script type="text/javascript">
                 commonModule.init(); 
             </script>
