--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -6,17 +6,15 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 col-md-9 col-lg-10">
-            <div id='coordinates-div'>
-                <span id='mousemove'></span>
-            </div>
-            <div id="map"></div>
+            <div id="map-voir-alertes"></div>
         </div>
         <div class="col-xs-12 col-md-3 col-lg-2"></div>
     </div>
 </div>
 <script type="application/javascript">
     $( document ).ready(function() {
-        mapModule.init();
+        var map = mapModule.init('map-voir-alertes');
+        mapModule.addFakeData(map);
     });
 </script>
 {% endblock %}
