Ajouter géolocalisation et ajouter d'un point par clic sur la carte.

--- a/src/UrgenceBundle/Resources/public/css/screen.css
+++ b/src/UrgenceBundle/Resources/public/css/screen.css
@@ -15,6 +15,10 @@ body,
     border-radius: 0;
 }
 
+.error-display {
+    color: #db1616;
+}
+
 /* * * * * Header * * * * */
 #page-header .navbar {
     margin-bottom: 0;
