--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -74,9 +74,10 @@
     $( document ).ready(function() {
         $('#button-post').click(function(){
             var data = {};
-            data['timestamp_alert'] = new Date().getTime();
+            data['timestamp_current'] = new Date().getTime();
             data['timestamp_position'] = new Date().getTime()+99999; 
-            data['position'] = {'longitude' : "0000", 'latitude' : "0000" };
+            data['longitude'] = 28.4444444;
+            data['latitude'] = 23.4444444 ;
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position){
                     data['position'] = {'longitude' : position.coords.longitude, 'latitude' : position.coords.latitude };
@@ -86,11 +87,12 @@
                   type: "POST",
                   url: BASE_URL+"/api/new-alerte",
                   data: JSON.stringify(data),
+                  dataType: 'json',
                   success: function(response){
                       console.log(response);
                   },
-                  dataType: 'json',
                   error:function(msg){
+                      console.log(msg);
                       alert( "Error !: " + msg );
                   }
             });
