--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -11,9 +11,12 @@
         <div class="col-xs-12 col-md-3 col-lg-2"></div>
     </div>
 </div>
-<script type="application/javascript">
-    $( document ).ready(function() {
-        var map = mapModule.init('map-voir-alertes');
-    });
+<script type="text/javascript">
+function initMap() {
+  mapModule.init('map-voir-alertes');  
+};
+</script>
+<script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBspTNgVFapTrsO_xYRY5Zzbx1nfDJPVXg&callback=initMap">
 </script>
 {% endblock %}
