--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -5,64 +5,66 @@
 {% block content %}
 
         {{ form_start(form, {'attr' : {'class': 'form-horizontal'}}) }}
-
-
-        <div class="form-group">
-            {{ form_label(form.public_user.lastName, 'Nom de famille',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
-                {{ form_widget(form.public_user.lastName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre nom de famille'}}) }}
-            </div>
-        </div>
+        <div class="col-md-5">
 
         <div class="form-group">
-            {{ form_label(form.public_user.firstName, 'Prénom',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
-                {{ form_widget(form.public_user.firstName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre prénom'}}) }}
-            </div>
-        </div>
-
-        <div class="form-group">
-            {{ form_label(form.public_user.phone, 'Téléphone',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
-                {{ form_widget(form.public_user.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone'}}) }}
-            </div>
-        </div>
-
-        <div class="form-group">
-            {{ form_label(form.public_user.mail, 'E-mail',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
-                {{ form_widget(form.public_user.mail, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre email'}}) }}
-            </div>
-        </div>
-
-        <div class="form-group">
-            {{ form_label(form.info, 'Informations complémentaires',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
-                {{ form_widget(form.info, {'attr': {'class': 'form-control', 'placeholder':'Précisez votre situation'}}) }}
-            </div>
-        </div>
-
-        <div class="form-group">
-            {{ form_label(form.alertType, "Type d'alerte",{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
+            {{ form_label(form.alertType, "Type d'alerte",{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
                 {{ form_widget(form.alertType, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
             </div>
         </div>
 
         <div class="form-group">
-            {{ form_label(form.severity, 'Sévérité',{'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            <div class="col-sm-9">
+            {{ form_label(form.severity, 'Sévérité',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
                 {{ form_widget(form.severity, {'attr': {'class': 'form-control', 'placeholder':''}}) }}
+            </div>
+        </div>    
+        
+        <div class="form-group">
+            {{ form_label(form.public_user.lastName, 'Nom de famille',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.lastName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre nom de famille'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.firstName, 'Prénom',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.firstName, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre prénom'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.phone, 'Téléphone',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.public_user.mail, 'E-mail',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.mail, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre email'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.info, 'Informations complémentaires',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.info, {'attr': {'class': 'form-control', 'placeholder':'Précisez votre situation', 'rows':'5'}}) }}
             </div>
         </div>
 
         {{ form_widget(form.longPos) }}
-        {{ form_widget(form.latPos) }}
+        {{ form_widget(form.latPos) }}     
+    </div>
 
+<div class="col-md-7">
         <div class="form-group">
-            <label class="control-label col-sm-3" for="position">Ma position</label>
-            <div class="col-sm-9">
+            <div class="col-xs-12">
                 <div class="container-fluid rounded-border padding-10">
+                    <label class="control-label" for="position" style="padding-top: 0;">Ma position</label>
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="radio" style="display: inline-block;">
@@ -70,7 +72,7 @@
                                     <input id="obtenir-position-radio" type="radio" name="position-group"> Position GPS
                                 </label>
                             </div>
-                            <button type="button" id="obtenir-position-btn" class="btn btn-default"><i class="fa fa-map-marker"></i> Obtenir</button>
+                            <button type="button" id="obtenir-position-btn" class="btn btn-default"><i class="fa fa-map-marker"></i> Utiliser ma position <strong>actuelle</strong></button>
                             <div>
                                <span id="geolocate-error-msg-container error-display"></span>
                             </div>
@@ -89,8 +91,9 @@
                 </div>
             </div>
         </div>
+</div>
 
-    {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary straight'}}) }}
+    {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary straight pull-right margin-bottom-20'}}) }}
 
     {{ form_rest(form) }}
 
