--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -8,7 +8,41 @@
         <div class="col-xs-12 col-md-9 col-lg-10">
             <div id="map-voir-alertes"></div>
         </div>
-        <div class="col-xs-12 col-md-3 col-lg-2"></div>
+        <div class="col-xs-12 col-md-3 col-lg-2" style="padding-left: 0; padding-right: 0;">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-user"> - </i></h3>
+              </div>
+              <div class="panel-body panel-form">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="nom">Nom : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Prénom : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Âge : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Sexe : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Localisation : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Heure de l'alerte : </label>
+                        <p id="nom" class="form-control-static"></p>
+                    </div>
+                </form>
+              </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript">
