Début de l'ajout des images png pour remplacer les markers.

--- a/src/UrgenceBundle/Resources/views/layout.html.twig
+++ b/src/UrgenceBundle/Resources/views/layout.html.twig
@@ -31,13 +31,14 @@
 			
 			<div id="page-wrapper">
 			
-				{# breadcrumbs #}
+                <br><br>
+<!--				{# breadcrumbs #}
 				<div class="page-breadcrumb">
                     <ol class="breadcrumb">
                       <li><a href="#">Accueil</a></li>
                       <li class="active">Alerter les secours</li>
                     </ol>
-                </div>
+                </div>-->
 				
 				{# content #}
 				<div id="page-content" class="container">
