--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -11,9 +11,9 @@
         <div class="col-xs-12 col-md-3 col-lg-2" style="padding-left: 0; padding-right: 0;">
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-user"> - </i></h3>
+                  <h3 class="panel-title"><a href="#demo" data-toggle="collapse"><i class="fa fa-user"> - </i> Carte 1</a></h3>
               </div>
-              <div class="panel-body panel-form">
+              <div id="demo" class="panel-body panel-form">
                 <form role="form">
                     <div class="form-group">
                         <label for="nom">Nom : </label>
