Ajout de l'adresse (contenu HTML)

--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -62,8 +62,9 @@
 
 <div class="col-md-7">
         <div class="form-group">
-            <div class="col-xs-12">
-                <div class="container-fluid rounded-border padding-10">
+            <div class="container-fluid rounded-border padding-10">
+            <div class="row">
+            <div class="col-xs-12 col-md-8">
                     <label class="control-label" for="position" style="padding-top: 0;">Ma position</label>
                     <div class="row">
                         <div class="col-xs-12">
@@ -85,10 +86,16 @@
                                     <input id="map-position-btn" type="radio" name="position-group"> Indiquer une position sur la carte
                                 </label>
                             </div>
-                            <div id="map-indiquer-position"></div>
                         </div>
                     </div>
+            </div>
+                <div class="col-xs-12 col-md-4">
+                   <p id="adresse-container">ksqjdlqdjlqjdlsqj<br>lsqkdlqkdlsqk sldkslqkdslqkd<br>35000 Rennes</p>
                 </div>
+            </div>
+            <div class="row">
+                <div id="map-indiquer-position"></div>
+            </div>
             </div>
         </div>
 </div>
