--- a/src/UrgenceBundle/Resources/views/layout.html.twig
+++ b/src/UrgenceBundle/Resources/views/layout.html.twig
@@ -75,7 +75,7 @@
 				
 				{# footer #}
 				<div id="page-footer">
-                    <p>Urgence - Hackathon Nec Mergitur - Paris - 2016</p>
+                    <p>Yourgence&trade; - IT Link - Hackathon Nec Mergitur - Paris - 2016</p>
 				</div>
 			</div>
 	</body>
