--- a/src/UrgenceBundle/Resources/public/css/screen.css
+++ b/src/UrgenceBundle/Resources/public/css/screen.css
@@ -158,6 +158,13 @@ form {
     min-height: 0;
 }
 
+div .container{
+    padding: 20px;
+}
+span .paragraph{
+
+}
+
 /* * * * * Map * * * * */
 #map-voir-alertes {
     height: 500px;
