--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -36,6 +36,20 @@
         </div>
 
         <div class="form-group">
+            {{ form_label(form.public_user.genre, 'Sexe',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.genre, {'attr': {'class': 'form-control', 'rows':'5'}}) }}
+            </div>
+        </div>    
+            
+        <div class="form-group">
+            {{ form_label(form.public_user.age, 'Age',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
+            <div class="col-sm-8">
+                {{ form_widget(form.public_user.age, {'attr': {'class': 'form-control', 'rows':'5', 'placeholder':'Entrez votre âge'}}) }}
+            </div>
+        </div>    
+            
+        <div class="form-group">
             {{ form_label(form.public_user.phone, 'Téléphone',{'label_attr': {'class': 'col-sm-4 control-label'}}) }}
             <div class="col-sm-8">
                 {{ form_widget(form.public_user.phone, {'attr': {'class': 'form-control', 'placeholder':'Entrez votre téléphone'}}) }}
