--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -8,101 +8,7 @@
         <div class="col-xs-12 col-md-9 col-lg-9">
             <div id="map-voir-alertes" style="padding-left: 0; padding-right: 0;"></div>
         </div>
-        <div class="col-xs-12 col-md-3 col-lg-3 cards-container">
-            <div class="collapse-card red">
-                <div class="title"> <strong><i class="fa fa-user"></i> - Hervé Ferrand</strong> </div>
-                <div class="body">
-                    <form role="form">
-                        <div class="form-group">
-                            <label for="nom">Nom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Prénom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Âge : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Sexe : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Localisation : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Heure de l'alerte : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="collapse-card black">
-                <div class="title"> <strong><i class="fa fa-user"></i> - Hugo Berthier</strong> </div>
-                <div class="body">
-                    <form role="form">
-                        <div class="form-group">
-                            <label for="nom">Nom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Prénom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Âge : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Sexe : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Localisation : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Heure de l'alerte : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="collapse-card green">
-                <div class="title"> <strong><i class="fa fa-user"></i> - Martin Soudard</strong> </div>
-                <div class="body">
-                    <form role="form">
-                        <div class="form-group">
-                            <label for="nom">Nom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Prénom : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Âge : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Sexe : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Localisation : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="nom">Heure de l'alerte : </label>
-                            <p id="nom" class="form-control-static"></p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+        <div class="col-xs-12 col-md-3 col-lg-3 cards-container"></div>
     </div>
 </div>
 <script type="text/javascript">
