Finalisation contenu à droite.

--- a/src/UrgenceBundle/Resources/public/css/screen.css
+++ b/src/UrgenceBundle/Resources/public/css/screen.css
@@ -146,6 +146,10 @@ form {
     padding-right: 20px;
 }
 
+.cards-container .collapse-card p {
+    padding: 0;
+}
+
 .cards-container .collapse-card {
     padding: 0;
 }
