Commit avant final.

--- a/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/voirAlertes.html.twig
@@ -1,6 +1,6 @@
 {% extends 'UrgenceBundle::layout.html.twig' %}
 
-{% block title %}Voir les alertes{% endblock %}
+{% block title %}Alertes en cours{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
