--- a/src/UrgenceBundle/Resources/views/header.html.twig
+++ b/src/UrgenceBundle/Resources/views/header.html.twig
@@ -17,7 +17,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{{ path('urgence_homepage') }}" class="hvr-sweep-to-top">Accueil <span class="sr-only">(page actuelle)</span></a></li>
             <li><a href="{{ path('urgence_alertsecours') }}" class="hvr-sweep-to-top">Alerter les secours</a></li>
-            <li><a href="{{ path('urgence_voiralertes') }}" class="hvr-sweep-to-top">Voir les alertes</a></li>
+            <li><a href="{{ path('urgence_voiralertes') }}" class="hvr-sweep-to-top">Alertes en cours</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
