Fixing address modification in the input and on the map

--- a/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
+++ b/src/UrgenceBundle/Resources/views/Alert/alert.html.twig
@@ -100,7 +100,10 @@
                                     <input id="map-address-btn" type="radio" name="position-group"> Entrer votre adresse
                                 </label>
                             </div>
-                            <input type="text" class="form-control" placeholder="Adresse" id="address_input">
+                            <div class="form-inline">
+                                <input type="text" class="form-control" placeholder="Adresse" id="address_input">
+                                <button class="btn btn-default" id="address_btn" type="button">OK</button>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
